# qutim

./: .gitignore  android_cmake.sh  qutim.meego
android/: AndroidManifest.xml  android_cmake.sh  build.xml  gdb.setup  local.properties
android/assets/: imports
android/assets/qml/: meego
android/assets/qml/declarative/profilecreator/: Main.qml
android/res/values/: libs.xml  strings.xml
core/: CMakeLists.txt  main.cpp
core/cmake/: QutIMMacros.cmake
core/libqutim/: CMakeLists.txt  debug.h  plugin.h
core/src/corelayers/simplecontactlist/lib/: CMakeLists.txt
core/src/widgets/: profilecreationwizard.cpp
plugins/adiumwebview/lib/: CMakeLists.txt
plugins/androidintegration/: CMakeLists.txt
plugins/androidintegration/meegoapplicationwindow/declarative/meego/: AboutDialog.qml  AddContactDialog.qml  AnimatedTabGroup.qml  AuthDialog.qml  Chat.qml  ChatChannelList.qml  ContactList.qml  ControlledMenu.qml  ItemDelegate.qml  JoinGroupChatDialog.qml  Main.qml  PasswordDialog.qml  ProxyPage.qml  SettingsPage.qml  TabIcon.qml
plugins/androidintegration/meegoapplicationwindow/src/: applicationwindow.cpp  applicationwindowplugin.cpp
